--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     
      <BR>
 
-        <div class="container">
+        <div class="container" width="300">
             <div>
-                <label for="name">First Name:</label>
+                <label for="name" >First Name:</label>
                 <input id="name" type="text" />
             </div>
 
@@ -91,7 +91,7 @@
 
             <div>
                 <label for="age">Age (in full years):</label>
-                <input id="age" type="text">
+                <input id="age" type="number">
             </div>
 
             <div>
